# RAG-Cocktail-System

./: README.md  pyproject.toml  start.py
app/routers/: predict - roi.py  predict.py
app/services/: rag_chain - ori.py  rag_chain.py
